--- a/cadastro.html
+++ b/cadastro.html
@@ -37,8 +37,10 @@
                         title="A senha deve conter, ao menos uma letra minúscula" />
                 </label>
                 <button type="submit">Cadastrar</button>
+                <div class="forGet">
                 <p><a href="#">Esqueci a senha</a></p>
                 <p><a href="#">Ainda não sou cadastrado(a)</a></p>
+                </div>
         </div>
         </form>
     </main>
